k8s/vanilla/Database-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Database-deployment
  labels:
    app: mysql-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-app
  template:
    metadata:
      labels:
        app: mysql-app
    spec:
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
      - name: mysql-app
        image: mysql:5.7.22
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: mysql-storage
            mountPath: /var/lib/mysql
