k8s/vanilla/Server-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: server-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server-app
  template:
    metadata:
      labels:
        app: server-app
    spec:
      containers:
        - name: server-app
          image: carloserl/fullstack-kubernetes_backend:1.01
          ports:
            - containerPort: 8000
