k8s/vanilla/Client-Service-Cluster-Ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  selector:
    app: client-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
