k8s/vanilla/Server-Service-ClusterIp.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  selector:
    app: server-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
